Cambio color azu a verde

--- a/main.css
+++ b/main.css
@@ -44,11 +44,11 @@ body {
   }
 
   .violeta {
-    background: #363062;
+    background: #2b580c;
   }
 
   .violeta.light {
-    background: #4d4c7d;
+    background: #639a67;
   }
 
   .naranja {
